--- a/index.html
+++ b/index.html
@@ -52,7 +52,23 @@
         <li>React</li>
     </ol>
  </div>
-
+<section>
+    <h2>Projects</h2>
+    <ul>
+         <li>
+            <a href="https://github.com/BlessingAmoah/Fractal-Fern">BarnSley Fern</a>
+        </li>
+        <li>
+            <a href="https://github.com/BlessingAmoah/Color_Predictor">Color_Predictor</a>
+        </li>
+         <li>
+            <a href="https://github.com/BlessingAmoah/educationdocument">Education Document Organizer</a>
+        </li>
+        <li>
+            <a href="https://github.com/BlessingAmoah/Zeller-s-Congruence">Zeller's Congruence</a>
+        </li>
+    </ul>
+</section>
  <section>
     <h2>Website</h2>
     <ul>
@@ -64,5 +80,9 @@
         </li>
     </ul>
 </section>
+<!-- Copyright footnote -->
+<div class="copyright">
+    <p>&copy; Blessing 2023.</p>
+</div>
 </body>
 </html>
