--- a/index.html
+++ b/index.html
@@ -7,82 +7,85 @@
 </head>
 
 <body>
-<div>
-    <h1>Blessing Amoah</h1>
-</div>
-<div>
-    <img src="bison.jpeg" id="photo" width ="201" height="100" >
-</div>
-<div>
-    <h2>Contact Details</h2>
-    <ul>
-        <li>Email: bsa5@calvin.edu</li>
-        <li>Phone: 206 537 9770</li>
-        <li>Address: 1230 Lake Drive SE, 49506</li>
-        <li>Location: Grand Rapids, Mi</li>
-    </ul>
-</div>
-<div>
-    <h2>Education</h2>
-    <ul>
-        <li>School: Calvin University</li>
-        <li>Major: Computer Science</li>
-        <li>Year: Sophomore</li>
-        <li>Start date: August 2022</li>
-        <li>Expected Graduation Date: April 2026</li>
-    </ul>
-</div>
-<div>
-    <h2>Programming Language</h2>
-    <ul>
-        <li>Python</li>
-        <li>C++</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>MySQL</li>
-    </ul>
-</div>
-<div>
-    <h2>Tools/Framework</h2>
-     <ol>
-        <li>Thonny</li>
-        <li>GuiZero</li>
-        <li>Thonny</li>
-        <li>Bootstrap</li>
-        <li>React</li>
-    </ol>
- </div>
-<section>
-    <h2>Projects</h2>
-    <ul>
-         <li>
-            <a href="https://github.com/BlessingAmoah/Fractal-Fern">BarnSley Fern</a>
-        </li>
-        <li>
-            <a href="https://github.com/BlessingAmoah/Color_Predictor">Color_Predictor</a>
-        </li>
-         <li>
-            <a href="https://github.com/BlessingAmoah/educationdocument">Education Document Organizer</a>
-        </li>
-        <li>
-            <a href="https://github.com/BlessingAmoah/Zeller-s-Congruence">Zeller's Congruence</a>
-        </li>
-    </ul>
-</section>
- <section>
-    <h2>Website</h2>
-    <ul>
-        <li>
-            <a href="https://www.linkedin.com/in/blessingamoah/">LinkedIn</a>
-        </li>
-        <li>
-            <a href="https://github.com/BlessingAmoah">GitHub</a>
-        </li>
-    </ul>
-</section>
-<!-- Copyright footnote -->
-<div class="copyright">
-    <p>&copy; Blessing 2023.</p>
-</div>
+    <div id="container">
+        <div>
+            <h1>Blessing Amoah</h1>
+        </div>
+        <div>
+            <img src="bison.jpeg" id="photo" width="201" height="100">
+        </div>
+        <div>
+            <h2>Contact Details</h2>
+            <ul>
+                <li>Email: bsa5@calvin.edu</li>
+                <li>Phone: 206 537 9770</li>
+                <li>Address: 1230 Lake Drive SE, 49506</li>
+                <li>Location: Grand Rapids, Mi</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Education</h2>
+            <ul>
+                <li>School: Calvin University</li>
+                <li>Major: Computer Science</li>
+                <li>Year: Sophomore</li>
+                <li>Start date: August 2022</li>
+                <li>Expected Graduation Date: April 2026</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Programming Language</h2>
+            <ul>
+                <li>Python</li>
+                <li>C++</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>MySQL</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Tools/Framework</h2>
+            <ol>
+                <li>Thonny</li>
+                <li>GuiZero</li>
+                <li>Thonny</li>
+                <li>Bootstrap</li>
+                <li>React</li>
+            </ol>
+        </div>
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <a href="https://github.com/BlessingAmoah/Fractal-Fern">BarnSley Fern</a>
+                </li>
+                <li>
+                    <a href="https://github.com/BlessingAmoah/Color_Predictor">Color_Predictor</a>
+                </li>
+                <li>
+                    <a href="https://github.com/BlessingAmoah/educationdocument">Education Document Organizer</a>
+                </li>
+                <li>
+                    <a href="https://github.com/BlessingAmoah/Zeller-s-Congruence">Zeller's Congruence</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Website</h2>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/blessingamoah/">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/BlessingAmoah">GitHub</a>
+                </li>
+            </ul>
+        </section>
+        <!-- Copyright footnote -->
+        <div class="copyright">
+            <p>&copy; Blessing 2023.</p>
+        </div>
+    </div>
 </body>
+
 </html>
